--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "@angular/router": "~12.2.0",
     "@ffmpeg/core": "^0.10.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
     "@types/uuid": "^8.3.1",
+    "@types/video.js": "^7.3.27",
+    "@videojs/themes": "^1.0.1",
     "firebase": "^9.1.0",
     "ngx-mask": "^12.0.0",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
+    "video.js": "^7.15.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
